// Vitest Snapshot v1

exports[`<Button/> > should render a danger button 1`] = `
<div>
  <div>
    <button
      class="_wrap_gkvrq_132 _danger_gkvrq_150"
      data-testid=""
      type="button"
    >
      Button
    </button>
  </div>
</div>
`;

exports[`<Button/> > should render a success button 1`] = `
<div>
  <div>
    <button
      class="_wrap_gkvrq_132 _success_gkvrq_154"
      data-testid=""
      type="button"
    >
      Button
    </button>
  </div>
</div>
`;

exports[`<Button/> > should render a text button 1`] = `
<div>
  <div>
    <button
      class="_wrap_gkvrq_132 _text_gkvrq_158"
      data-testid=""
      type="button"
    >
      Button
    </button>
  </div>
</div>
`;
